experimental framework intro done

--- a/artikulua.tex
+++ b/artikulua.tex
@@ -243,15 +243,15 @@ However, this decision encountered an early methodological problem. In order to 
 
 It has been suggested that adults tend to use more conventional language \cite{nguyen2013old} whereas for young people it is more common to display repetitions and out of dictionary words \citep{rao2010classifying,rosenthal2011age,morgan2017predicting}. Generalizing on this idea we will assume that writing style changes according to the age of the twitter user. In other words, we will consider that \emph{adult writing style} is more formal whereas young people's style can be seen as more informal. Therefore, we will be classifying users as young/adult by classifying their tweets in terms of formal or informal language.
 
-\subsection{Experimental setup}\label{sec:met}
+\subsection{Experimental Framework}\label{sec:exper-fram}
 
-Horretarako metodologia ezberdinak erabili dira, metodoen artean konparaketa bat egiteko asmoarekin, haien artean, ez-gainbegiratutako metodo estatistikoa, ikasketa automatikoan (\textit{Machine Learning}) oinarritutako hainbat sailkatzaile, zein \textit{IXA pipes} dokumentu sailkatzailea erabili dira. Horrela, hiru sistemetatik emaitza onenak lortzen dituena zein den aztertuko da eta zergatia argitu.
+Following the setting established above, we will address the problem by means of several machine learning approaches. First, we will try one unsupervised statistical method based on perplexity \cite{gamallo2017language}. Second, we will experiment with several supervised approaches: (i) a baseline method using sparse, \emph{one-hot} word representations; (ii) a feature-based method using word representations as continuous word vectors, namely, word embeddings; (iii) a feature-based method using word clusters \cite{agerri2016robust,agerri2019language} and, (iv) a deep learning approach leveraging character contextual word embeddings and a neural network architecture \cite{akbik2018contextual}.
 
-Klaseak zein ezaugarriak definituta daudelarik, sailkatzailea garatzea izango da hurrengo pausua, hiru modelo ezberdin erabilita: eredu estatistikoan oinarritutako sailkatzaile ez-gainbegiratua, ikasketa automatikoan oinarritutako hainbat sailkatzaile eta \textit{IXA pipes}en dokumentu sailkatzailea. Sailkatzaile ezberdinak garatu ostean, emaitza onenak lortzen dituena aukeratu eta datu errealetan aplikatua izango da, gure corpusa osatzen duten erabiltzaileen artean helduak eta gazteak zeintzuk diren antzemanez.
+We will develop a classifier with each of the methods listed above and evaluate it on a held-out, gold-standard dataset manually annotated at tweet level for the categories of \emph{formal} and \emph{informal}. The method that obtains the best results in the experiments will be used to annotate the 6 million tweets obtained thereby classifying their authors as \emph{young} or \emph{adult}.
 
+In the rest of this section, we will first describe the process of manual annotation of the training and evaluation data. After that, we describe the configuration settings of each of the systems used or implemented for the experiments.
 
-
-\subsubsection{Data} \label{sec:for inf sail}
+\subsubsection{Gold Standard Data}\label{sec:gold-standard-data}
 
 \indent Gazte eta heldu klaseak iragartzeko, idatzitako testuaren estiloa izango dugu oinarri, txioen estiloa zehazki esanda. Era honetan, testuaren estiloaren arabera bi testu mota ezberdinduko dira, formalak eta informalak. Sailkatailea beraz, txio informal zein formalak sailkatzean oinarrituko da, erabiltzaile bakoitzaren txio guztiak honen arabera sailkatuz. Horrela, txio pertsonal bakoitzaren testuan oinarrituko da gure sailkatzailea, testua nola idatzia izan den aztertuz, formal edo informal moduan etiketatuko duena. Erabiltzaileak testu motaren arabera sailkatuko direnez, txio formal edo informalen kopuruaren arabera determinatuko da gazteak edo helduak diren. Honela, erabiltzaile baten txioen gehiengoa informala denean, erabiltzailea gaztea dela kontsideratuko da, txioen gehiengoa formala denean ostera, erabiltzailea heldu bezala sailkatuko da. Era honetan, erabiltzaileak ez dira itxura fisiko edo adinaren arabera sailkatuko, idazteko eragatik antzeman daitekeen izaeraren arabera baizik. Kasu zehatz honetan, euskal erabiltzaileetan zentratuko garenez, erabaki da euskarazko testuetan soilik zentratzea, hizkuntza bakoitzak sistema propio bat beharko lukeelako.\\
 \indent Behin euskarazko txioen testua aldagai moduan aukeratuta, testu hau garbitu eta estandarizatzeari ekingo zaio, erroreak ekidin eta sailkapena hobeto burutzeko. Era honetan, karaktere alfanumerikoak dituzten hitzak soilik mantenduko dira, emotikono, erabiltzaile izen (@), hastag (\#) edo url esteka guztiak ezabatuz eta testua sinplifikatuz. Honez gain, behin karaktere alfanumerikoak soilik dituzten hitzak dauzkagula, bakarrik lau hitz baino gehiago dituzten txioak hartuko dira kontutan, beste txio guztiak alboratuz.\\
