--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,10 @@
+@inproceedings{akbik2018contextual,
+  title={Contextual string embeddings for sequence labeling},
+  author={Akbik, Alan and Blythe, Duncan and Vollgraf, Roland},
+  booktitle={Proceedings of the 27th International Conference on Computational Linguistics},
+  pages={1638--1649},
+  year={2018}
+}
 
 @inproceedings{pennacchiotti2011democrats,
   title={Democrats, republicans and starbucks afficionados: user classification in twitter},
