working on perplexity

--- a/artikulua.tex
+++ b/artikulua.tex
@@ -245,53 +245,50 @@ It has been suggested that adults tend to use more conventional language \cite{n
 
 \subsection{Experimental Framework}\label{sec:exper-fram}
 
-Following the setting established above, we will address the problem by means of several machine learning approaches. First, we will try one unsupervised statistical method based on perplexity \cite{gamallo2017language}. Second, we will experiment with several supervised approaches: (i) a baseline method using sparse, \emph{one-hot} word representations; (ii) a feature-based method using word representations as continuous word vectors, namely, word embeddings; (iii) a feature-based method using word clusters \cite{agerri2016robust,agerri2019language} and, (iv) a deep learning approach leveraging character contextual word embeddings and a neural network architecture \cite{akbik2018contextual}.
+Following the setting established above, we will address the problem of classifying each tweet as \emph{formal} or \emph{informal} by means of several machine learning approaches. First, we will try one unsupervised statistical method based on perplexity \cite{gamallo2017language}. Second, we will experiment with several supervised approaches: (i) a baseline method using sparse, \emph{one-hot} word representations \cite{pedregosa2011scikit}; (ii) a feature-based method using word representations as continuous word vectors, namely, word embeddings \cite{mikolov2013distributed,pennington-etal-2014-glove,mikolov-etal-2018-advances}; (iii) a feature-based method using word clusters \cite{agerri2016robust,agerri2019language} and (iv), a deep learning approach leveraging character contextual word embeddings and a neural network architecture \cite{akbik2018contextual}.
 
-We will develop a classifier with each of the methods listed above and evaluate it on a held-out, gold-standard dataset manually annotated at tweet level for the categories of \emph{formal} and \emph{informal}. The method that obtains the best results in the experiments will be used to annotate the 6 million tweets obtained thereby classifying their authors as \emph{young} or \emph{adult}.
+We will develop a classifier with each of the methods listed above and evaluate it on a held-out, gold-standard dataset manually annotated at tweet level for the categories of \emph{formal} and \emph{informal}. The method that obtains the best results in the experiments will be then used to annotate the 6 million tweets obtained thereby classifying their authors as \emph{young} or \emph{adult}. In this sense, users will be classified according to the writing style of the tweets in their timelines.
 
-In the rest of this section, we will first describe the process of manual annotation of the training and evaluation data. After that, we describe the configuration settings of each of the systems used or implemented for the experiments.
+In the rest of this section we will describe the process of manual annotation of the training and evaluation data. After that, we describe the configuration settings of each of the systems used or implemented for the experiments.
 
 \subsubsection{Gold Standard Data}\label{sec:gold-standard-data}
 
-\indent Gazte eta heldu klaseak iragartzeko, idatzitako testuaren estiloa izango dugu oinarri, txioen estiloa zehazki esanda. Era honetan, testuaren estiloaren arabera bi testu mota ezberdinduko dira, formalak eta informalak. Sailkatailea beraz, txio informal zein formalak sailkatzean oinarrituko da, erabiltzaile bakoitzaren txio guztiak honen arabera sailkatuz. Horrela, txio pertsonal bakoitzaren testuan oinarrituko da gure sailkatzailea, testua nola idatzia izan den aztertuz, formal edo informal moduan etiketatuko duena. Erabiltzaileak testu motaren arabera sailkatuko direnez, txio formal edo informalen kopuruaren arabera determinatuko da gazteak edo helduak diren. Honela, erabiltzaile baten txioen gehiengoa informala denean, erabiltzailea gaztea dela kontsideratuko da, txioen gehiengoa formala denean ostera, erabiltzailea heldu bezala sailkatuko da. Era honetan, erabiltzaileak ez dira itxura fisiko edo adinaren arabera sailkatuko, idazteko eragatik antzeman daitekeen izaeraren arabera baizik. Kasu zehatz honetan, euskal erabiltzaileetan zentratuko garenez, erabaki da euskarazko testuetan soilik zentratzea, hizkuntza bakoitzak sistema propio bat beharko lukeelako.\\
-\indent Behin euskarazko txioen testua aldagai moduan aukeratuta, testu hau garbitu eta estandarizatzeari ekingo zaio, erroreak ekidin eta sailkapena hobeto burutzeko. Era honetan, karaktere alfanumerikoak dituzten hitzak soilik mantenduko dira, emotikono, erabiltzaile izen (@), hastag (\#) edo url esteka guztiak ezabatuz eta testua sinplifikatuz. Honez gain, behin karaktere alfanumerikoak soilik dituzten hitzak dauzkagula, bakarrik lau hitz baino gehiago dituzten txioak hartuko dira kontutan, beste txio guztiak alboratuz.\\
-\indent Erabiltzaileen bizitza etapa zein den iragartzen lagungarri izango den formal/informal txio sailkatzailea garatzea izango da hurrengo pausua. Txio bakoitzaren idazkera estiloa ezberdintzen lagunduko duen sistema garatzeari ekingo zaio beraz. Helburu hori betetzeko, ez-gainbegiratutako modelo estatistiko zein ikasketa automatikoko metodoak erabiliko dira, azkeneko hauek artearen egoeran emaitza onak eman baitituzte. Horietaz gain ere, IXA taldearen baitan garatutako \textit{IXA pipes}en dokumentu sailkatzailea erabiliko da, etiketatutako corpus txikietarako aukera ona delarik. Hala ere, sailkatzaile ezberdinak garatzera igaro aurretik, hauek garatu eta ebaluatzeko erabiliko den corpus txiki bat etiketatzeari ekin zaio.
-
-%\subsubsection{Corpusaren etiketatzea}\label{sec:corp etik}
-
-\indent Kontutan hartuta erreferentziazko aldagaia erabiltzaile bakoitzaren txio pertsonalak direla, corpus guztiaren zati txiki bat etiketatu da, sailkatzaile ezberdinak garatu eta ebaluatzeko asmoarekin. Horretarako, ausaz 1.000 txio pertsonal aukeratu dira eta idazteko moduaren arabera sailkatuak izan dira. Era honetan, txio batek \textit{formal} etiketa eramango du, hizkuntza estandarrean idatzia izan bada, edo \textit{informal} etiketa, txioa modu kolokialean idatzia izan denean. Corpusaren egiturari begiratuz gero (\ref{tab:corpus-taula}. taula), ikusi daiteke 1.000 txioez osatzen den etiketatutako corpus honek txio formal eta informalen kopuru antzekoa daukala, corpus orekatu bat izanik. Txioen batez besteko luzera ia 10 tokenekoa da, txio laburrenak 5 tokenekoak izanik eta luzeenak 34 tokenekoak izanik.
-
 \begin{table}[H]
   \centering
-  \begin{tabular}{|l|r|}
-    \hline
-    \textbf{Etiketatutako corpusaren ebaluazioa} & \\ \hline 
-    Txio kopurua & 1.000 \\ \hline
-    Txio formalak & 492 \\ \hline
-    Txio informalak & 508 \\ \hline
-    Txio laburrena & 5 token \\ \hline
-    Txio luzeena & 34 token \\ \hline
-    Tokenak txioko batezbeste & 9,66 \\ \hline
+  \begin{tabular}{|l|r|} \hline
+    Total number of tweets & 1.000 \\ \hline
+    Formal & 492 \\ \hline
+    Informal & 508 \\ \hline
+    Tokens in shortest tweet & 5 \\ \hline
+    Tokens in longest tweet & 34 \\ \hline
+    Token avg. & 9.66 \\ \hline
   \end{tabular}
-  \caption{Eskuz etiketatutako corpusaren ebaluazioa.}
-  \label{tab:corpus-taula}
+  \caption{Gold standard corpus.}
+  \label{tab:gold-corpus}
 \end{table}
 
-\subsubsection{Unsupervised approach: \textit{Perplexity}}\label{sec:estat}
 
-\indent Ez-gainbegiratutako eredu estatistikoan oinarritutako metodo hau garatzeko, txioak euskarazko \textit{hizkuntz eredu} formal batekin konparatuko dira, horiek formalak edo informalak diren zehazteko. Eredu ezberdin horien distantzia neurgarri bihurtzeko asmoarekin \textit{perplexity} neurria erabiliko da, geroz eta altuagoa izanik informalagoa dela adieraziz.\\
-\indent Horrela, atal honetan, \textit{hizkuntz distantzia}ren kontzeptua erabiliko da, hizkuntza barietate bat beste batetik zein ezberdina den adierazten lagunduko duena.Txio formal eta informalak bereizte aldera, txioak euskarazko \textit{hizkuntz eredu} formal batekin konparatuak izango dira eta hauen \textit{hizkuntz ereduarekiko distantzia} kalkulatu da. Hizkuntz ereduen arteko distantzia hau kalkulatze aldera, karaktereetan oinarritutako n-grama modeloan oinarritu gara, 7-gramak erabiliz, ereduen arteko distantzia kalkulatzeko asmoarekin \citep{gamallo2017language}. Hizkuntz ereduarekiko distantzia kuantifikatzeko \textit{perplexity} balioa erabili ohi da \citep{chen1999empirical}, beraz lan honetan ere ebaluatutako txio bakoitza hizkuntz eredu formaletik zenbat aldentzen den adieraziko digun balioa lortzeko \textit{perplexity}a erabiliko da. Gainera, ez da lehenengo aldia \textit{perplexity}aren balioa txioetan osagai informalak aurkitzeko erabiltzen dela, hiztegi kanpoko hitzak (OOV) detektatzeko erabilia izan baita txioak oinarri hartuta, txio informalak hautemateko \citep{gonzalez2015analysis}. Kasu horretan hitzak modu soltean aztertuak izan ziren arren, kasu zehatz honetarako txioa osorik hartu da kontutan, orokortasun bat bilatzeko asmoarekin.\\
+In order to focus on learning to classify tweets according to writing style, we decided to clean the tweets keeping only those words that contained alphanumeric characters. Thus, we removed emoticons, hashtags, users' names (@) and URL links. Furthermore, we only considered those tweets that contained more than 4 tokens. We then randomly selected 1000 tweets sent from personal accounts from the 6 million tweet dataset collected as described in Section \ref{sec:data-extraction}. One annotator manually labeled every tweet as \emph{formal} or \emph{informal}. To manually label the tweets, a qualitative methodology was followed: all those tweets that contained out of vocabulary words or colloquial expressions were classified as informal. This methodology has been motivated by previous work on classifying formal and colloquial tweets \cite{gonzalez2015analysis}. Table \ref{tab:gold-corpus} shows the main features of our manually annotated dataset.
+
+\subsubsection{Unsupervised approach: \textit{Perplexity}}\label{sec:unsup-appr-text}
+
+Perplexity is a widely-used evaluation metric for language models built with n-grams extracted from text corpora \cite{chen1999empirical}. Furthermore, it has been used for specific tasks, namely, to classify between formal and colloquial tweets \cite{gonzalez2015analysis} or for language identification between similar languages \cite{gamallo2017language}. Both works inspire our approach to classifying tweets as formal or informal using perplexity. The former showed that perplexity could be useful to detect out-of-vocabulary words in tweets \cite{gonzalez2015analysis}. More importantly for us, the latter formally proposed the perplexity-distance between two languages.
+
+Ez-gainbegiratutako eredu estatistikoan oinarritutako metodo hau garatzeko, txioak euskarazko \textit{hizkuntz eredu} formal batekin konparatuko dira, horiek formalak edo informalak diren zehazteko. Eredu ezberdin horien distantzia neurgarri bihurtzeko asmoarekin \textit{perplexity} neurria erabiliko da, geroz eta altuagoa izanik informalagoa dela adieraziz.
+
+Horrela, atal honetan, \textit{hizkuntz distantzia}ren kontzeptua erabiliko da, hizkuntza barietate bat beste batetik zein ezberdina den adierazten lagunduko duena.Txio formal eta informalak bereizte aldera, txioak euskarazko \textit{hizkuntz eredu} formal batekin konparatuak izango dira eta hauen \textit{hizkuntz ereduarekiko distantzia} kalkulatu da. Hizkuntz ereduen arteko distantzia hau kalkulatze aldera, karaktereetan oinarritutako n-grama modeloan oinarritu gara, 7-gramak erabiliz, ereduen arteko distantzia kalkulatzeko asmoarekin \citep{gamallo2017language}. Hizkuntz ereduarekiko distantzia kuantifikatzeko \textit{perplexity} balioa erabili ohi da \citep{chen1999empirical}, beraz lan honetan ere ebaluatutako txio bakoitza hizkuntz eredu formaletik zenbat aldentzen den adieraziko digun balioa lortzeko \textit{perplexity}a erabiliko da. Gainera, ez da lehenengo aldia \textit{perplexity}aren balioa txioetan osagai informalak aurkitzeko erabiltzen dela, hiztegi kanpoko hitzak (OOV) detektatzeko erabilia izan baita txioak oinarri hartuta, txio informalak hautemateko \citep{gonzalez2015analysis}. Kasu horretan hitzak modu soltean aztertuak izan ziren arren, kasu zehatz honetarako txioa osorik hartu da kontutan, orokortasun bat bilatzeko asmoarekin.
 
 %\paragraph{Diseinua}
 
-Txio bakoitza, karaktereen 7-grametan oinarrituz, hizkuntz eredu formalarekin konparatu ostean, txioaren urruntasuna kuantifikatzeari ekingo zaio, txio bakoitzari \textit{perplexity} balio bat luzatuz. \textit{Perplexity}aren balioak adierazten du, modelo bat zeinen ondo egokitzen den ebaluazio datuetara, modelora egokitzeko probabilitatearen alderantzizkoa izanik. Honela, txioak geroz eta balio altuagoa lortu, geroz eta urrunago egongo da hizkuntz eredu formaletik, hau da, geroz eta balio altuagoak esango du informalagoa dela txio hori. \textit{perplexity} balioa txikiagoa baldin bada ostera, txioa hizkuntz eredutik hurbil dagoela adieraziko du, txioa formala dela adieraziz. Beraz, txio formal eta informalak bereizteko \textit{perplexity} balio muga bat jarri beharko da, atalase hori baino baxuagoak formal moduan kontsideratuz eta hortik gorakoak informaltzat joz.\\
-\indent 7-grametan oinarritutako eredu hau garatzeko, \textit{dataset} edo corpusa bi zatitan banatu da, alde batetik garapen faserako corpusaren \%65a erabili da eta bestetik, ebaluazio faserako corpusaren \%35a. Garapen fasean informal/formal bereizteko \textit{perplexity}ak hartu beharko lukeen balioa zehaztuko da, ahalik eta txio gehien ondo sailkatzeko intentzioarekin. Ebaluazio fasean ostera, garapen fasean finkatutako atalaseak lortutako emaitzak ikusiko dira, garapenean erabili ez diren datuak baliatuz. \textit{Dataset}a bi zatitan banatuta, garapena eta ebaluazioa, sistemak datuen gehiegizko egokitzea jasatea ekidingo da, emaitzak aurrez ikusi gabeko datu multzo batetan balioztatuko baitira.
+Txio bakoitza, karaktereen 7-grametan oinarrituz, hizkuntz eredu formalarekin konparatu ostean, txioaren urruntasuna kuantifikatzeari ekingo zaio, txio bakoitzari \textit{perplexity} balio bat luzatuz. \textit{Perplexity}aren balioak adierazten du, modelo bat zeinen ondo egokitzen den ebaluazio datuetara, modelora egokitzeko probabilitatearen alderantzizkoa izanik. Honela, txioak geroz eta balio altuagoa lortu, geroz eta urrunago egongo da hizkuntz eredu formaletik, hau da, geroz eta balio altuagoak esango du informalagoa dela txio hori. \textit{perplexity} balioa txikiagoa baldin bada ostera, txioa hizkuntz eredutik hurbil dagoela adieraziko du, txioa formala dela adieraziz. Beraz, txio formal eta informalak bereizteko \textit{perplexity} balio muga bat jarri beharko da, atalase hori baino baxuagoak formal moduan kontsideratuz eta hortik gorakoak informaltzat joz.
+
+7-grametan oinarritutako eredu hau garatzeko, \textit{dataset} edo corpusa bi zatitan banatu da, alde batetik garapen faserako corpusaren \%65a erabili da eta bestetik, ebaluazio faserako corpusaren \%35a. Garapen fasean informal/formal bereizteko \textit{perplexity}ak hartu beharko lukeen balioa zehaztuko da, ahalik eta txio gehien ondo sailkatzeko intentzioarekin. Ebaluazio fasean ostera, garapen fasean finkatutako atalaseak lortutako emaitzak ikusiko dira, garapenean erabili ez diren datuak baliatuz. \textit{Dataset}a bi zatitan banatuta, garapena eta ebaluazioa, sistemak datuen gehiegizko egokitzea jasatea ekidingo da, emaitzak aurrez ikusi gabeko datu multzo batetan balioztatuko baitira.
 
 %\subsubsection{Ereduaren garapena: atalasearen moldaketa}
 
 Txioak sailkatzeko sistema garatuta dagoenean, txio bat formaltzat jotzeko \textit{perplexity}ak hartu beharko lukeen balio minimo egokia aukeratu beharko da. Azaldu den moduan, \textit{perplexity}aren balioa geroz eta handiagoa izan, txioa aurrez zehaztutako \textit{Language Model}etik geroz eta gehiago aldentzearen seinale izango da. Hortaz, balio zehatz bat eman beharko zaio informal eta formalak ezberdintzen dituen balioari. Hau da, atalase bat finkatuko da, non balio horretatik behera txioak formalak direla kontsideratuko da, eta balio horretatik aurrera, txioak informaltzat joko dira.
 
-Sistemaren garapenerako etiketatutako korpusaren \%65a erabiliko da, hau da, \textit{perplexity}aren balioa zein izango den zehazteko txio bat informala den edo ez erabakitzeko. Atalasea markatuko duen balio hau, 0tik 10era doazen balio guztiekin probatu da, 0.01 iteratuz aldiro. Honela, jarraian datozen grafikoetan (\ref{fig:doi est}, \ref{fig:acc f1} eta \ref{fig:all m} irudiak), atalasearen muga balioa moldatu ahala, doitasuna, estaldura, asmatze tasa eta F-scorea nola aldatzen diren ikusi ahalko da. Honek lagunduko digu, \textit{perplexity}aren balio finko bat zehaztean txio informal zein formalak ondo sailkatuko dituena. 
+Sistemaren garapenerako etiketatutako korpusaren \%65a erabiliko da, hau da, \textit{perplexity}aren balioa zein izango den zehazteko txio bat informala den edo ez erabakitzeko. Atalasea markatuko duen balio hau, 0tik 10era doazen balio guztiekin probatu da, 0.01 iteratuz aldiro. Honela, jarraian datozen grafikoetan (\ref{fig:doi est}, \ref{fig:acc f1} eta \ref{fig:all m} irudiak), atalasearen muga balioa moldatu ahala, doitasuna, estaldura, asmatze tasa eta F-scorea nola aldatzen diren ikusi ahalko da. Honek lagunduko digu, \textit{perplexity}aren balio finko bat zehaztean txio informal zein formalak ondo sailkatuko dituena.
 
 \begin{figure}[H]
   \centering
@@ -309,9 +306,11 @@ Sistemaren garapenerako etiketatutako korpusaren \%65a erabiliko da, hau da, \te
   \label{fig:doi est}
 \end{figure}
 
-\textbf{Doitasuna}ri esker, sistemak txio informalak sailkatzeko duen gaitasuna ikusi dezakegu. Honek esan nahi du, ikusi ahalko dela sistemak txio informalak ondo sailkatzeko duen gaitasuna, formal/informal muga balioa moldatzen goazen heinean. Horrela, \ref{fig:doi} irudian ikusi daitekeen moduan, \textit{perplexity}ak 3 balioa baino altuagoa lortzen duenean, \textit{baseline}a (0.5) gainditzen hasten da, honek esan nahi du, muga 3 baino balio altuagoetan jartzean, hasten dela sailkapen hobea egiten. Bestalde, \textit{perplexity}aren muga 7 edo balio altuagoetan zehaztean, hobekuntza gelditu egiten da, txio informal ia guztiak ondo sailkatzen dituelarik. Hala ere, doitasuna balioarentzat 0.8ko balio bat desiragarria izanik, atalasea \textit{perplexity}=4 baliotik gora kokatu beharko genuke gutxienez. Baina, doitasun eta estaldura desiragarri batzuen artean oreka bat lortu beharko da.\\
-\indent Bestalde, \textbf{estaldura}ri erreparatzen bazaio, sistemak txio informalak detektatzeko duen gaitasuna ikusi daiteke, muga balio edo atalasea moldatzen den heinean. Honela, \ref{fig:est} irudian ikusi ahal da, \textit{perplexity}ak 3 balioa baino altuagoa lortzen duenean, estaldura galtzen hasten dela. Honek esan nahi du, 3 baliotik aurrera txio informalak okerrago detektatzen hasten dela. Beste behin ere, onargarritzat hartuko dugu 0.8ko estaldura izatea gutxienez, horretarako atalasearen balioa 4.5 baino txikiagoa izan beharko delarik. Hala ere, atalasearen balio finkoa aukeratzeko aurretik lortutako doitasun desiragarri baten emaitzak ere kontutan hartu beharko dira.\\
-\indent Hortaz, bi neurri ezberdin hauen arteko oreka bat bilatu beharko da atalasearen balioa finkatu eta emaitza onak lortu nahi izatekotan. Batetik sistemak txio informalak ondo sailkatzea (doitasuna) interesatzen zaigu, eta bestetik, txio informal horiek identifikatzea (estaldura) interesatzen zaigu. Grafikoei erreparatuz gero (\ref{fig:doi est}. irudia), ikusi daiteke balio bat hobetuz doan heinean bestea okertu egiten dela. Honek esan nahi du, geroz eta txio informal gutxiago identifikatu ahala, sailkapen lan hori hobeto egingo duela. Horregatik, bi lerroen ebaketa puntuari arreta berezia jarri beharko zaio, eta baita, bi balioak konbinatzen dituen F-score neurriari ere. Jakinda doitasun desiragarria 4tik aurrera dela eta estaldura desiragarria 4.5etik behera, esan daiteke jarraibide batzuk baditugula atalasearen balio egokia aukeratzeko.
+\textbf{Doitasuna}ri esker, sistemak txio informalak sailkatzeko duen gaitasuna ikusi dezakegu. Honek esan nahi du, ikusi ahalko dela sistemak txio informalak ondo sailkatzeko duen gaitasuna, formal/informal muga balioa moldatzen goazen heinean. Horrela, \ref{fig:doi} irudian ikusi daitekeen moduan, \textit{perplexity}ak 3 balioa baino altuagoa lortzen duenean, \textit{baseline}a (0.5) gainditzen hasten da, honek esan nahi du, muga 3 baino balio altuagoetan jartzean, hasten dela sailkapen hobea egiten. Bestalde, \textit{perplexity}aren muga 7 edo balio altuagoetan zehaztean, hobekuntza gelditu egiten da, txio informal ia guztiak ondo sailkatzen dituelarik. Hala ere, doitasuna balioarentzat 0.8ko balio bat desiragarria izanik, atalasea \textit{perplexity}=4 baliotik gora kokatu beharko genuke gutxienez. Baina, doitasun eta estaldura desiragarri batzuen artean oreka bat lortu beharko da.
+
+Bestalde, \textbf{estaldura}ri erreparatzen bazaio, sistemak txio informalak detektatzeko duen gaitasuna ikusi daiteke, muga balio edo atalasea moldatzen den heinean. Honela, \ref{fig:est} irudian ikusi ahal da, \textit{perplexity}ak 3 balioa baino altuagoa lortzen duenean, estaldura galtzen hasten dela. Honek esan nahi du, 3 baliotik aurrera txio informalak okerrago detektatzen hasten dela. Beste behin ere, onargarritzat hartuko dugu 0.8ko estaldura izatea gutxienez, horretarako atalasearen balioa 4.5 baino txikiagoa izan beharko delarik. Hala ere, atalasearen balio finkoa aukeratzeko aurretik lortutako doitasun desiragarri baten emaitzak ere kontutan hartu beharko dira.
+
+Hortaz, bi neurri ezberdin hauen arteko oreka bat bilatu beharko da atalasearen balioa finkatu eta emaitza onak lortu nahi izatekotan. Batetik sistemak txio informalak ondo sailkatzea (doitasuna) interesatzen zaigu, eta bestetik, txio informal horiek identifikatzea (estaldura) interesatzen zaigu. Grafikoei erreparatuz gero (\ref{fig:doi est}. irudia), ikusi daiteke balio bat hobetuz doan heinean bestea okertu egiten dela. Honek esan nahi du, geroz eta txio informal gutxiago identifikatu ahala, sailkapen lan hori hobeto egingo duela. Horregatik, bi lerroen ebaketa puntuari arreta berezia jarri beharko zaio, eta baita, bi balioak konbinatzen dituen F-score neurriari ere. Jakinda doitasun desiragarria 4tik aurrera dela eta estaldura desiragarria 4.5etik behera, esan daiteke jarraibide batzuk baditugula atalasearen balio egokia aukeratzeko.
 
 \begin{figure}[H]
   \centering
@@ -329,8 +328,9 @@ Sistemaren garapenerako etiketatutako korpusaren \%65a erabiliko da, hau da, \te
   \label{fig:acc f1}
 \end{figure}
 
-Sistemaren egokitasuna aztertzeko beste neurri bat, \textbf{asmatze tasa} dugu, sistemaren egokitasun orokorra azalduko duena. Orain arte estaldura eta doitasunarekin txio informalak detektatzeko gaitasuna ebaluatzen ibili gara, baina neurri honekin txio informal zein formalak sailkatzeko gaitasuna ebaluatuko dugu. Hortaz, asmatze tasarekin, txioak formal edo informalak diren ondo sailkatzeko kapazitatea neurtuko da. Atalasearen balioa mugitu ahala, ikusi daiteke balioa 4 ingurura iritsi ahala emaitza onenak lortzen dituela, \ref{fig:acc} irudian ikusi daitekeen moduan. Beraz, txioak \textit{Language Model}arekiko \textit{perplexity} balioaren muga 4 inguruan kokatu beharko da sailkapen egoki bat egiteko eta ahalik eta errore gutxien lortzeko.\\
-\indent Behin doitasuna eta estaldura balioak aztertu direla, bi balio hauek konbinatzen dituen \textbf{f-neurria} aztertzeari ekingo zaio. \ref{fig:f1} irudian ikusi daitekeen moduan, 4 balio inguruan emaitza onenak lortzen direla ikusi daiteke. Asmatze tasaren balio onenekin gertatu den moduan, 4 balio inguruan aurkitzen diren balio horietan arreta jarriko da erabakia hartzerako orduan. Atalaseak 4 edo inguruko balioak hartzen dituenean, 0.8tik gorako \textit{f-neurria}k lortzen ditu, honi gehituta estaldura eta doitasun balio desiragarrienak 4 - 4.5 tartean daudela, erabakia hartzeko datu nahikoak daudela ondorioztatu daiteke.
+Sistemaren egokitasuna aztertzeko beste neurri bat, \textbf{asmatze tasa} dugu, sistemaren egokitasun orokorra azalduko duena. Orain arte estaldura eta doitasunarekin txio informalak detektatzeko gaitasuna ebaluatzen ibili gara, baina neurri honekin txio informal zein formalak sailkatzeko gaitasuna ebaluatuko dugu. Hortaz, asmatze tasarekin, txioak formal edo informalak diren ondo sailkatzeko kapazitatea neurtuko da. Atalasearen balioa mugitu ahala, ikusi daiteke balioa 4 ingurura iritsi ahala emaitza onenak lortzen dituela, \ref{fig:acc} irudian ikusi daitekeen moduan. Beraz, txioak \textit{Language Model}arekiko \textit{perplexity} balioaren muga 4 inguruan kokatu beharko da sailkapen egoki bat egiteko eta ahalik eta errore gutxien lortzeko.
+
+Behin doitasuna eta estaldura balioak aztertu direla, bi balio hauek konbinatzen dituen \textbf{f-neurria} aztertzeari ekingo zaio. \ref{fig:f1} irudian ikusi daitekeen moduan, 4 balio inguruan emaitza onenak lortzen direla ikusi daiteke. Asmatze tasaren balio onenekin gertatu den moduan, 4 balio inguruan aurkitzen diren balio horietan arreta jarriko da erabakia hartzerako orduan. Atalaseak 4 edo inguruko balioak hartzen dituenean, 0.8tik gorako \textit{f-neurria}k lortzen ditu, honi gehituta estaldura eta doitasun balio desiragarrienak 4 - 4.5 tartean daudela, erabakia hartzeko datu nahikoak daudela ondorioztatu daiteke.
 
 \begin{figure}[H]
   \centering
@@ -959,7 +959,7 @@ All appendix sections must be cited in the main text. In the appendixes, Figures
 %=====================================
 \reftitle{References}
 \externalbibliography{yes}
-\bibliography{biblio}
+\bibliography{biblio,/home/ragerri/references/references}
 
 
 %\begin{thebibliography}{999}
