--- a/biblio.bib
+++ b/biblio.bib
@@ -1,11 +1,3 @@
-@inproceedings{akbik2018contextual,
-  title={Contextual string embeddings for sequence labeling},
-  author={Akbik, Alan and Blythe, Duncan and Vollgraf, Roland},
-  booktitle={Proceedings of the 27th International Conference on Computational Linguistics},
-  pages={1638--1649},
-  year={2018}
-}
-
 @inproceedings{pennacchiotti2011democrats,
   title={Democrats, republicans and starbucks afficionados: user classification in twitter},
   author={Pennacchiotti, Marco and Popescu, Ana-Maria},
@@ -54,33 +46,13 @@
   publisher={Public Library of Science}
 }
 
-@article{agerri2016robust,
-  title={Robust multilingual named entity recognition with shallow semi-supervised features},
-  author={Agerri, Rodrigo and Rigau, German},
-  journal={Artificial Intelligence},
-  volume={238},
-  pages={63--82},
-  year={2016},
-  publisher={Elsevier}
-}
-
 @inproceedings{agerri2014ixa,
-  title={IXA pipeline: Efficient and Ready to Use Multilingual NLP tools.},
+  title={IXA pipeline: Efficient and Ready to Use Multilingual NLP tools},
   author={Agerri, Rodrigo and Bermudez, Josu and Rigau, German},
   booktitle={LREC},
   volume={2014},
   pages={3823--3828},
   year={2014}
-}
-
-@article{agerri2019language,
-  title={Language independent sequence labelling for Opinion Target Extraction},
-  author={Agerri, Rodrigo and Rigau, German},
-  journal={Artificial Intelligence},
-  volume={268},
-  pages={85--95},
-  year={2019},
-  publisher={Elsevier}
 }
 
 @article{al2012homophily,
@@ -140,17 +112,6 @@
   publisher={IOP Publishing}
 }
 
-@article{brown1992class,
-  title={Class-based n-gram models of natural language},
-  author={Brown, Peter F and Desouza, Peter V and Mercer, Robert L and Pietra, Vincent J Della and Lai, Jenifer C},
-  journal={Computational linguistics},
-  volume={18},
-  number={4},
-  pages={467--479},
-  year={1992},
-  publisher={MIT Press}
-}
-
 @book{castells2005sociedad,
   title={La sociedad red},
   author={Castells, Manuel and Gimeno, Carmen Mart{\'\i}nez and Albor{\'e}s, Jes{\'u}s},
@@ -175,24 +136,6 @@
   pages={359--394},
   year={1999},
   publisher={Elsevier}
-}
-
-@inproceedings{clark2003combining,
-  title={Combining distributional and morphological information for part of speech induction},
-  author={Clark, Alexander},
-  booktitle={Proceedings of the tenth conference on European chapter of the Association for Computational Linguistics-Volume 1},
-  pages={59--66},
-  year={2003},
-  organization={Association for Computational Linguistics}
-}
-
-@inproceedings{collins2002discriminative,
-  title={Discriminative training methods for hidden markov models: Theory and experiments with perceptron algorithms},
-  author={Collins, Michael},
-  booktitle={Proceedings of the ACL-02 conference on Empirical methods in natural language processing-Volume 10},
-  pages={1--8},
-  year={2002},
-  organization={Association for Computational Linguistics}
 }
 
 @inproceedings{conover2011political,
@@ -245,14 +188,6 @@
   booktitle={Proceedings of CLEF 2014 Evaluation Labs},
   pages={1129--1136},
   year={2014}
-}
-
-@inproceedings{mikolov2013distributed,
-  title={Distributed representations of words and phrases and their compositionality},
-  author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
-  booktitle={Advances in neural information processing systems},
-  pages={3111--3119},
-  year={2013}
 }
 
 @article{morgan2017predicting,
@@ -368,26 +303,3 @@
   author={Fern{\'a}ndez de Landa, Joseba},
   year={2018}
 }
-
-@InProceedings{turian-ratinov-bengio:2010:ACL,
-author    = {Turian, Joseph  and  Ratinov, Lev-Arie  and  Bengio, Yoshua},
-title     = {Word Representations: A Simple and General Method for Semi-Supervised Learning},
-booktitle = {Proceedings of the 48th Annual Meeting of the Association for Computational Linguistics},
-month     = {July},
-year      = {2010},
-address   = {Uppsala, Sweden},
-publisher = {Association for Computational Linguistics},
-pages     = {384--394}
-}
-
-@article{ratnaparkhi1999learning,
-  title={Learning to parse natural language with maximum entropy models},
-  author={Ratnaparkhi, Adwait},
-  journal={Machine learning},
-  volume={34},
-  number={1-3},
-  pages={151--175},
-  year={1999},
-  publisher={Springer}
-}
-
